--- a/styles/contact.css
+++ b/styles/contact.css
@@ -147,6 +147,13 @@ button.ticket {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
+  cursor: pointer;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+button.ticket:hover {
+  opacity: 0.65;
 }
 #ticket-box {
   display: none;
@@ -206,6 +213,7 @@ input.box {
 }
 button.profile {
   display: block;
+  cursor: pointer;
   font-family: var(--sofia);
   font-size: 1.25rem;
   background-color: var(--magenta);
@@ -214,6 +222,12 @@ button.profile {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+button.profile:hover {
+  opacity: 0.65;
 }
 #profile-box {
   display: none;
@@ -247,6 +261,12 @@ nav.icons {
 }
 .icon {
   color: var(--dark-purple);
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+.icon:hover {
+  opacity: 0.65;
 }
 .icons li {
   list-style: none;
@@ -353,20 +373,16 @@ section > p {
   font-family: var(--sofia);
   font-weight: bold;
 }
-ul.contact {
-  font-family: var(--sofia);
-  list-style-type: circle;
-  list-style-position: inside;
-  margin: 16px;
-}
-.contact li {
+
+.contact-form li {
+  font-size: 1.125rem;
   padding: 8px;
   list-style: square;
 }
 /* section p::before {
   content: "⦿";
 } */
-form {
+.main-form {
   width: 100%;
 }
 .form {
@@ -408,6 +424,12 @@ button {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #a20067a6;
 }
 h2 {
   font-family: var(--proxima);
@@ -489,6 +511,13 @@ form.newsletter {
   background-color: var(--dark-purple);
   color: #fff;
   flex: 1;
+  cursor: pointer;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+#sign-up:hover {
+  opacity: 0.65;
 }
 
 /* footer 
@@ -644,7 +673,7 @@ h6 {
     text-align: center;
     background-color: var(--dark-purple);
     width: 320px;
-    padding: 16px;
+    padding: 16.5px;
     margin: 0;
     /* border-left: 2px solid var(--dark-purple);
 border-right: 2px solid var(--dark-purple); */
@@ -659,9 +688,7 @@ border-right: 2px solid var(--dark-purple); */
 border-right: 2px solid transparent; */
   }
   .inactive:hover {
-    /* border-left: 2px solid var(--dark-purple);
-border-right: 2px solid var(--dark-purple); */
-    background-color: #210759a6;
+    background-color: var(--dark-purple);
   }
   .dropdown-info {
     font-size: 1.125rem;
@@ -690,12 +717,18 @@ border-right: 2px solid var(--dark-purple); */
     font-weight: bold;
     margin-top: 16px;
   }
+  .dropdown-info p {
+    font-family: var(--neue-haas);
+  }
   /* main 
 --------------------*/
   .main-wrapper {
     width: 50%;
     background-color: var(--light-grey);
     padding-bottom: 50px;
+  }
+  .newsletter-wrapper {
+    width: 90%;
   }
   h1 {
     font-family: var(--proxima);
@@ -722,9 +755,6 @@ border-right: 2px solid var(--dark-purple); */
   }
   li > p {
     font-size: 1.125rem;
-  }
-  div.newsletter-wrapper {
-    width: 50%;
   }
   /* newsletter
 --------------------*/
