--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -150,6 +150,13 @@ button.ticket {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
+  cursor: pointer;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+button.ticket:hover {
+  opacity: 0.65;
 }
 #ticket-box {
   display: none;
@@ -209,6 +216,7 @@ input.box {
 }
 button.profile {
   display: block;
+  cursor: pointer;
   font-family: var(--sofia);
   font-size: 1.25rem;
   background-color: var(--magenta);
@@ -217,6 +225,12 @@ button.profile {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+button.profile:hover {
+  opacity: 0.65;
 }
 #profile-box {
   display: none;
@@ -250,6 +264,12 @@ nav.icons {
 }
 .icon {
   color: var(--dark-purple);
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+.icon:hover {
+  opacity: 0.65;
 }
 .icons li {
   list-style: none;
@@ -369,6 +389,8 @@ h2 {
 .fa-arrow-circle-left,
 .fa-arrow-circle-right {
   display: none;
+  opacity: 0;
+  visibility: hidden;
 }
 .fa-arrow-circle-down {
   display: block;
@@ -486,10 +508,24 @@ h3 {
 }
 .image-wrapper {
   width: 90%;
-  margin: 0 auto;
+  margin: 32px auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 32px;
+  transition-property: scale;
+  transition-duration: 0.5s;
+  scale: 1;
+}
+.image-wrapper figure {
+  margin: 0;
+  transition-property: scale opacity;
+  transition-duration: 0.5s;
+  scale: 1;
+  opacity: 0.65;
+}
+.image-wrapper figure:hover {
+  scale: 1.1;
+  opacity: 1;
 }
 .image-wrapper div {
   border-radius: 15px;
@@ -568,6 +604,13 @@ form.newsletter {
   background-color: var(--dark-purple);
   color: #fff;
   flex: 1;
+  cursor: pointer;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+#sign-up:hover {
+  opacity: 0.65;
 }
 
 /* footer 
@@ -723,7 +766,7 @@ h6 {
     text-align: center;
     background-color: var(--dark-purple);
     width: 320px;
-    padding: 16px;
+    padding: 16.5px;
     margin: 0;
     /* border-left: 2px solid var(--dark-purple);
 border-right: 2px solid var(--dark-purple); */
@@ -738,9 +781,7 @@ border-right: 2px solid var(--dark-purple); */
 border-right: 2px solid transparent; */
   }
   .inactive:hover {
-    /* border-left: 2px solid var(--dark-purple);
-border-right: 2px solid var(--dark-purple); */
-    background-color: #210759a6;
+    background-color: var(--dark-purple);
   }
   .dropdown-info {
     font-size: 1.125rem;
@@ -768,6 +809,9 @@ border-right: 2px solid var(--dark-purple); */
     font-family: var(--proxima);
     font-weight: bold;
     margin-top: 16px;
+  }
+  .dropdown-info p {
+    font-family: var(--neue-haas);
   }
   /* Main
 --------------------*/
@@ -812,6 +856,7 @@ border-right: 2px solid var(--dark-purple); */
   .fa-arrow-circle-down {
     display: none;
     opacity: 0;
+    visibility: hidden;
   }
   figure.card-large {
     display: block;
@@ -838,6 +883,8 @@ border-right: 2px solid var(--dark-purple); */
   .fa-arrow-circle-left,
   .fa-arrow-circle-right {
     display: block;
+    visibility: visible;
+    opacity: 1;
     font-size: 6rem;
     margin-bottom: 50px;
   }
