--- a/styles/explore.css
+++ b/styles/explore.css
@@ -145,6 +145,13 @@ button.ticket {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
+  cursor: pointer;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+button.ticket:hover {
+  opacity: 0.65;
 }
 #ticket-box {
   display: none;
@@ -204,6 +211,7 @@ input.box {
 }
 button.profile {
   display: block;
+  cursor: pointer;
   font-family: var(--sofia);
   font-size: 1.25rem;
   background-color: var(--magenta);
@@ -212,6 +220,12 @@ button.profile {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+button.profile:hover {
+  opacity: 0.65;
 }
 #profile-box {
   display: none;
@@ -245,6 +259,12 @@ nav.icons {
 }
 .icon {
   color: var(--dark-purple);
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+.icon:hover {
+  opacity: 0.65;
 }
 .icons li {
   list-style: none;
@@ -371,7 +391,7 @@ h1 {
 }
 h2,
 h3 {
-  font-family: var(--proxima-soft);
+  font-family: var(--proxima);
   font-size: 1.5rem;
   margin-bottom: 0;
 }
@@ -438,6 +458,11 @@ p.button {
   padding: 8px 32px;
   margin-top: 0;
   margin-bottom: 16px;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+}
+p.button:hover {
+  background-color: #a2006780;
 }
 /* section.newsletter {
   width: 100%;
@@ -505,6 +530,13 @@ form.newsletter {
   background-color: var(--dark-purple);
   color: #fff;
   flex: 1;
+  cursor: pointer;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+#sign-up:hover {
+  opacity: 0.65;
 }
 
 /* footer 
@@ -659,7 +691,7 @@ h6 {
     text-align: center;
     background-color: var(--dark-purple);
     width: 320px;
-    padding: 16px;
+    padding: 16.5px;
     margin: 0;
     /* border-left: 2px solid var(--dark-purple);
     border-right: 2px solid var(--dark-purple); */
@@ -674,9 +706,7 @@ h6 {
     border-right: 2px solid transparent; */
   }
   .inactive:hover {
-    /* border-left: 2px solid var(--dark-purple);
-    border-right: 2px solid var(--dark-purple); */
-    background-color: #210759a6;
+    background-color: var(--dark-purple);
   }
   .dropdown-info {
     font-size: 1.125rem;
@@ -705,6 +735,9 @@ h6 {
     font-weight: bold;
     margin-top: 16px;
   }
+  .dropdown-info p {
+    font-family: var(--neue-haas);
+  }
   /* Main
 --------------------*/
   main {
@@ -724,7 +757,7 @@ h6 {
   }
   h2,
   h3 {
-    font-size: 1.875rem;
+    font-size: 1.75rem;
   }
   h4 {
     font-size: 1.5rem;
