--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -147,6 +147,13 @@ button.ticket {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
+  cursor: pointer;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+button.ticket:hover {
+  opacity: 0.65;
 }
 #ticket-box {
   display: none;
@@ -206,6 +213,7 @@ input.box {
 }
 button.profile {
   display: block;
+  cursor: pointer;
   font-family: var(--sofia);
   font-size: 1.25rem;
   background-color: var(--magenta);
@@ -214,6 +222,12 @@ button.profile {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+button.profile:hover {
+  opacity: 0.65;
 }
 #profile-box {
   display: none;
@@ -247,6 +261,12 @@ nav.icons {
 }
 .icon {
   color: var(--dark-purple);
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+.icon:hover {
+  opacity: 0.65;
 }
 .icons li {
   list-style: none;
@@ -394,6 +414,11 @@ p.button {
   padding: 8px 32px;
   margin-top: 0;
   margin-bottom: 16px;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+}
+p.button:hover {
+  background-color: #a2006780;
 }
 .newsletter-wrapper {
   background-image: url(../images/newsletter.jpg);
@@ -458,6 +483,13 @@ form.newsletter {
   background-color: var(--dark-purple);
   color: #fff;
   flex: 1;
+  cursor: pointer;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+#sign-up:hover {
+  opacity: 0.65;
 }
 
 /* footer 
@@ -613,7 +645,7 @@ h6 {
     text-align: center;
     background-color: var(--dark-purple);
     width: 320px;
-    padding: 16px;
+    padding: 16.5px;
     margin: 0;
     /* border-left: 2px solid var(--dark-purple);
   border-right: 2px solid var(--dark-purple); */
@@ -628,9 +660,7 @@ h6 {
   border-right: 2px solid transparent; */
   }
   .inactive:hover {
-    /* border-left: 2px solid var(--dark-purple);
-  border-right: 2px solid var(--dark-purple); */
-    background-color: #210759a6;
+    background-color: var(--dark-purple);
   }
   .dropdown-info {
     font-size: 1.125rem;
@@ -658,6 +688,9 @@ h6 {
     font-family: var(--proxima);
     font-weight: bold;
     margin-top: 16px;
+  }
+  .dropdown-info p {
+    font-family: var(--neue-haas);
   }
   /* Main
 --------------------*/
